codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────╮
│  >_ Corbanu Terminal (v0.0.0)                                            │
│                                                                          │
│  Model:            gpt-5.1-codex-max                                     │
│  Model provider:   Ambient                                               │
│  Directory: [[workspace]]                                                │
│  Permissions:      Workspace (Approve for me)                            │
│  Security:         Requested Permissive; effective protection unverified │
│                    (/security)                                           │
│  Agents.md:        <none>                                                │
│                                                                          │
│  Token usage:      0 total  (0 input + 0 output)                         │
│  Context window:   100% left (0 used / 272K)                             │
│  Limits:           data not available yet                                │
╰──────────────────────────────────────────────────────────────────────────╯
